app/styles/scss/modules/_base.scss
//**************************Variables, mixins & placeholders********************
%clearfix {
	&::after {
		content:"";
		display:table;
		clear:both;
	}
}

$arrow-size: 3rem;

//**************************General styles**************************
* {
	box-sizing: border-box;
}

.link {
	display: inline-block;
	&--box {
		&:hover {
			opacity: 0.8;
		}
	}
}

.underline {
	position: relative;
	display: inline-block;
	&::after {
		position: absolute;
		display: block;
		content:"";
		bottom:-1rem;
		left:50%;
		transform: translateX(-50%);
		text-align: center;
		width:75%;
		border-top:2px solid;
	}
}

.projects, .about, .contact {
	padding:2rem 3rem;
}

